Important changes from 1.6.3 => 1.6.4
============================================================
Errors in token events are less likely to cause the application to halt
OpenRosa forms can now handle geopoint (location) fields, has support for displaying uploaded images and provides a datelist to use in tracks
Default fields can be added to a new track by adapting the TrackModel in your own project and changing the getDefaultFields() method
Export results can now be filtered by round description too
Form and table bridges have changed. Perform the following search & replaces on your code:
    MUtil_Model_FormBridge::          => MUtil_Model_Bridge_FormBridge::
    MUtil_Model_FormBridge            => MUtil_Model_Bridge_FormBridgeInterface
    MUtil_Model_VerticalTableBridge   => MUtil_Model_Bridge_VerticalTableBridge
    MUtil_Model_TableBridge           => MUtil_Model_Bridge_TableBridge
    Gems_Model_ThreeColumnTableBridge => Gems_Model_Bridge_ThreeColumnTableBridge
The number of reminders no longer includes the first non-reminder mail

Important changes from 1.6.2 => 1.6.3
============================================================
Menu structure has changed: to avoid nesting problems and issues with bread-crumb navigation edit and delete actions are now children of the show action
Track fields split in fields and appointments: check any code using any track field tables directly, track field id's are no longer integers and getFieldsElements() is no longer in use
GemsEscort->tokenMailFields() no longer exists
Tracks can use appointments instead of date fields: when an appointment is changed then the linked track is changed as well
The token overview can also be filtered on missing or incorrect email addresses and on hover each token shows it's comment
The token mail communication is reset if a new valid until date is later than the last sent email date
Sending emails can be blocked on per respondent or per track
Added a send mails overview for each respondent